...
      key: 'dropsFeed',
    });
  };

  render() {
    return (
      <View testID="Home" style={{ flex: 1 }}>
        <Header hasTabs>
          <Left style={styles.container}>
            <Button transparent style={{ marginLeft: 5 }} onPress={this.toggleDialog}>
              <MaterialCommunityIcons color={colors.black} name="information-outline" size={18} />
            </Button>
          </Left>
...
            <Button transparent onPress={this.goToDropsFeed}>
              <Megaphone width={19} height={19} />
            </Button>
          </Right>
        </Header>
        <TabView
          testID="Tabs"
          style={styles.container}
          navigationState={this.state}
          renderScene={this._renderScene}
          renderTabBar={this._renderTabBar}
          onIndexChange={this._handleIndexChange}
          initialLayout={initialLayout}
...
